updated cities.html with all the necessary content

--- a/cities.html
+++ b/cities.html
@@ -46,14 +46,12 @@
 <div class="col-md">Paris</div>
 
 <div class="col-md">Rome</div>
-  
+
 </div>
 </div>
-
-
-
-
-
+<br>
+<br>
+<p>The row with city names breaks first as it has more characters compared to the above row which has only single characters. </p>
 
 
 </body>
