added thumbnails to pictures

--- a/cities.html
+++ b/cities.html
@@ -53,6 +53,17 @@
 <br>
 <p>The row with city names breaks first as it has more characters compared to the above row which has only single characters. </p>
 
+<div class="container">
+  <img src="Paris.jpg" class="img-fluid" alt="Paris">
+  <img src="rome.jpg" class="img-fluid" alt="Rome">
+  <img src="seattle.jpg" class="img-fluid" alt="Seattle">
+</div>
+
+<div class="container">
+  <img src="Paris.jpg" class="img-thumbnail" alt="paris">
+  <img src="rome.jpg" class="img-thumbnail" alt="rome">
+  <img src="seattle.jpg" class="img-thumbnail" alt="seattle"> 
+</div>
 
 </body>
 </html>
