--- a/cities.html
+++ b/cities.html
@@ -64,6 +64,58 @@
   <img src="rome.jpg" class="img-thumbnail" alt="rome">
   <img src="seattle.jpg" class="img-thumbnail" alt="seattle"> 
 </div>
+<br>
+<br>
+
+<table class="table table-success table-hover table-striped-columns caption-top">
+  <caption><h4>City, River, Tree table</h4></caption>
+  <thead class="table-dark">
+    <tr>
+      <th scope="col">Letter</th>
+      <th scope="col">City</th>
+      <th scope="col">River</th>
+      <th scope="col">Tree</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">S</th>
+      <td>Seattle</td>
+      <td>Cedar</td>
+      <td>Douglas Fir</td>
+    </tr>
+    <tr>
+      <th scope="row">K</th>
+      <td>Kansas</td>
+      <td>Wakasura</td>
+      <td>White Oak</td>
+    </tr>
+    <tr>
+      <th scope="row">A</th>
+      <td>Austin</td>
+      <td>Barton Creek</td>
+      <td>Bur oak</td>
+    </tr>
+    <tr>
+      <th scope="row">N</th>
+      <td>Nashville</td>
+      <td>Cumberland</td>
+      <td>Conifer</td>
+    </tr>
+    <tr>
+      <th scope="row">D</th>
+      <td>Dallas</td>
+      <td>Trinity</td>
+      <td>Crape Myrtles</td>
+    </tr>
+    <tr>
+      <th scope="row">A</th>
+      <td>Atlanta</td>
+      <td>Flint</td>
+      <td>Pawpaw</td>
+    </tr>
+  </tbody>
+</table>
 
 </body>
 </html>
