Added button groups

--- a/cities.html
+++ b/cities.html
@@ -85,37 +85,64 @@
       <td>Douglas Fir</td>
     </tr>
     <tr>
-      <th scope="row">K</th>
-      <td>Kansas</td>
+      <th scope="row">I</th>
+      <td>Indore</td>
       <td>Wakasura</td>
       <td>White Oak</td>
     </tr>
     <tr>
-      <th scope="row">A</th>
-      <td>Austin</td>
+      <th scope="row">R</th>
+      <td>Raleigh</td>
       <td>Barton Creek</td>
       <td>Bur oak</td>
     </tr>
     <tr>
-      <th scope="row">N</th>
-      <td>Nashville</td>
+      <th scope="row">A</th>
+      <td>Adelaide</td>
       <td>Cumberland</td>
       <td>Conifer</td>
     </tr>
     <tr>
-      <th scope="row">D</th>
-      <td>Dallas</td>
+      <th scope="row">P</th>
+      <td>Paris</td>
       <td>Trinity</td>
       <td>Crape Myrtles</td>
     </tr>
     <tr>
-      <th scope="row">A</th>
-      <td>Atlanta</td>
+      <th scope="row">R</th>
+      <td>Rome</td>
       <td>Flint</td>
       <td>Pawpaw</td>
     </tr>
   </tbody>
 </table>
 
+<br>
+
+<div>
+  <button class="btn">S</button>
+  <button class="btn">I</button>
+  <button class="btn">R</button>
+  <button class="btn">A</button>
+  <button class="btn">P</button>
+  <button class="btn">R</button>
+
+</div>
+<div class="btn-toolbar" aria-label="Button Groups">
+<div class="btn-group" aria-label="First Button Group">
+  <button class="btn btn-success">S</button>
+  <button class="btn btn-success">I</button>
+  <button class="btn btn-success">R</button>
+</div>
+
+<div class="btn-group" aria-label="Second Button Group">
+  <button class="btn btn-warning">A</button>
+  <button class="btn btn-warning">P</button>
+</div>
+
+<div class="btn-group" aria-label="Third Button Group">
+  <button class="btn btn-danger">R</button>
+</div>
+</div>
 </body>
 </html>
