--- a/cities.html
+++ b/cities.html
@@ -12,7 +12,31 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
     integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </head>
+
+
 <body>
+
+  <nav class="navbar navbar-expand-md navbar-light and bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="cities.html">A Few Cities</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mr.auto">
+          <li class="nav-item">
+            <a class="nav-link" href="basic.html">Basic</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="advanced.html">Advanced</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+
+
 <h1>Visit cities with Skanda Shreekar Sira Prabhakar</h1>
 
 <div class="container">
@@ -128,6 +152,7 @@
   <button class="btn">R</button>
 
 </div>
+
 <div class="btn-toolbar" aria-label="Button Groups">
 <div class="btn-group" aria-label="First Button Group">
   <button class="btn btn-success">S</button>
@@ -144,5 +169,23 @@
   <button class="btn btn-danger">R</button>
 </div>
 </div>
+
+<br>
+
+<div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+    Choose a page
+  </button>
+  <ul class="dropdown-menu">
+    <li><a class="dropdown-item" href="basic.html">Basic</a></li>
+    <li><a class="dropdown-item" href="advanced.html">Advanced</a></li>
+  </ul>
+</div>
+
+<br>
+
+
+
+
 </body>
 </html>
