--- a/cities.html
+++ b/cities.html
@@ -135,7 +135,7 @@
     <tr>
       <th scope="row">R</th>
       <td>Rome</td>
-      <td>Flint</td>
+      <td>flint</td>
       <td>Pawpaw</td>
     </tr>
   </tbody>
