--- a/cities.html
+++ b/cities.html
@@ -181,6 +181,27 @@
     <li><a class="dropdown-item" href="advanced.html">Advanced</a></li>
   </ul>
 </div>
+<br>
+<br>
+
+<form>
+  <div class="form-group">
+    <label for="exampleInputEmail1" class="form-label">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+  </div>
+  <br>
+  <div class="form-group">
+    <label for="exampleInputPassword1" class="form-label">City</label>
+    <input type="text" class="form-control" id="city" placeholder="Enter your city">
+  </div>
+  <div class="form-check">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">Signup for newsletter?</label>
+  </div>
+  <br>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
 
 <br>
 
