Created form and filled values

--- a/cities.html
+++ b/cities.html
@@ -91,6 +91,7 @@
 <br>
 <br>
 
+<div class="container">
 <table class="table table-success table-hover table-striped-columns caption-top">
   <caption><h4>City, River, Tree table</h4></caption>
   <thead class="table-dark">
@@ -140,9 +141,11 @@
     </tr>
   </tbody>
 </table>
+</div>
 
 <br>
 
+<div class="container">
 <div>
   <button class="btn">S</button>
   <button class="btn">I</button>
@@ -169,9 +172,11 @@
   <button class="btn btn-danger">R</button>
 </div>
 </div>
+</div>
 
 <br>
 
+<div class="container">
 <div class="dropdown">
   <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
     Choose a page
@@ -181,9 +186,11 @@
     <li><a class="dropdown-item" href="advanced.html">Advanced</a></li>
   </ul>
 </div>
+</div>
 <br>
 <br>
 
+<div class="container">
 <form>
   <div class="form-group">
     <label for="exampleInputEmail1" class="form-label">Email address</label>
@@ -202,6 +209,7 @@
   <br>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+</div>
 
 <br>
 
