Added bonus section cards

--- a/cities.html
+++ b/cities.html
@@ -213,8 +213,36 @@
 
 <br>
 
+<div class="container">
+   
+  <div class="card-group">
+  <div class="card" style="width: 18rem;">
+    <img src="Paris.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Paris</h5>
+      <p class="card-text">Paris, the capital of France</p>
+      <a href="https://en.wikipedia.org/wiki/Paris" class="btn btn-primary">More info</a>
+    </div>
+  </div>
 
+  <div class="card" style="width: 18rem;">
+    <img src="rome.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Rome</h5>
+      <p class="card-text">Rome the City of Seven Hills</p>
+      <a href="https://en.wikipedia.org/wiki/Rome" class="btn btn-primary">More info</a>
+    </div>
+  </div>
 
-
+  <div class="card" style="width: 18rem;">
+    <img src="seattle.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Seattle</h5>
+      <p class="card-text">Seattle, chief city of the state of Washington, U.S</p>
+      <a href="https://en.wikipedia.org/wiki/Seattle" class="btn btn-primary">More info</a>
+    </div>
+  </div>
+</div>
+</div>
 </body>
 </html>
